--- a/style.css
+++ b/style.css
@@ -37,10 +37,11 @@ body{
     background-color: coral;
 }
 .pixel {
-    background: white;
-    height: 40px;
     width: 40px;
-    border: solid black 1px;
+    height: 40px;
+    float: left;
+    border: 1px solid black;
+    background-color: white;
 
 }
 #pixel-board{
@@ -48,13 +49,26 @@ body{
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(5,1fr);
-     
+     width: 210px;
     
 }
 #clear-board{
-    border-radius: 5%;
-  height: 40px;
-  width: 40px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+    margin: 5px 0 15px;
+    background-color: rgb(255, 148, 49);
+    padding: 2px;
+    border-radius: 7px;
+}
+#sub{
+    margin: 5px 0 15px;
+    padding: 2px;
+    border-radius: 7px;
+}
+#button-random-color{
+    margin: 5px 0 15px;
+    padding: 2px;
+    border-radius: 7px;
+    background-color: rgb(255, 148, 49);
+}
+div{
+    display: block;
 }
