--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
     height: 40px;
     float: left;
     border: 1px solid black;
-    background-color: white;
+    background-color: rgb(0, 255, 255)
 
 }
 #pixel-board{
