--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
     height: 40px;
     float: left;
     border: 1px solid black;
-    background-color: rgb(0, 255, 255)
+    background-color: white
 
 }
 #pixel-board{
@@ -49,7 +49,8 @@ body{
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(5,1fr);
-     width: 210px;
+     
+     background-color: white;
     
 }
 #clear-board{
